# my-first-codex-cli-project

./: README.md  pyproject.toml
news-debate/: NONCODER_GUIDE.md  README.md  debate.py  main.py  news.py  requirements.txt  summarize.py  summary.py  web_app.py
scripts/: safe_pull_main.sh
src/my_first_codex_cli_project/: main.py
