[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "my-first-codex-cli-project"
version = "0.1.0"
description = "My first CLI project"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
my-first-codex = "my_first_codex_cli_project.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
